--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   </head>
   <body id="home">
+
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- my css -->
     <link rel="stylesheet" href="style.css" />
 
@@ -42,7 +44,7 @@
 
     <!-- jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/WhatsApp Image 2023-12-28 at 00.51.28_e5fb7b92.jpg" alt="adityaarya" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/WhatsApp Image 2023-12-28 at 00.51.28_e5fb7b92.jpg" alt="adityaarya" width="200" class="rounded-circle img-thumbnail" data-aos="fade-in"  data-aos-duration="1500"/>
       <h1 class="display-4">Aditya Arya Wibowo.</h1>
       <p class="lead">Student|Learning</p>
       <hr class="my-4" />
@@ -65,10 +67,10 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id aliquam a iste asperiores dignissimos vero quae labore non, nemo soluta?</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-left">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto quam obcaecati, repudiandae suscipit quae ad asperiores a voluptates quidem? Qui officiis quo aliquid eveniet natus?</p>
           </div>
         </div>
@@ -92,7 +94,8 @@
         </div>
         <div class="row justify-content-evenly">
           <div class="col-md-4 mb-3">
-            <div class="card" style="width: 18rem">
+            <div class="card" style="width: 18rem"  data-aos="fade-up"
+            data-aos-duration="1000" data-aos-delay="200">
               <img src="img/project/christin-hume-Hcfwew744z4-unsplash.jpg" class="card-img-top" alt="project 1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -100,7 +103,8 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card" style="width: 18rem">
+            <div class="card" style="width: 18rem"  data-aos="fade-up"
+            data-aos-duration="1000" data-aos-delay="300">
               <img src="img/project/nezt-xs-okhTdAMBCak-unsplash.jpg" class="card-img-top" alt="project 2" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -108,7 +112,8 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card" style="width: 18rem">
+            <div class="card" style="width: 18rem" data-aos="fade-up"
+            data-aos-duration="1000" data-aos-delay="400">
               <img src="img/project/andrew-neel-cckf4TsHAuw-unsplash.jpg" class="card-img-top" alt="project 3" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -116,7 +121,8 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card" style="width: 18rem">
+            <div class="card" style="width: 18rem" data-aos="fade-up"
+            data-aos-duration="1000" data-aos-delay="500">
               <img src="img/project/kobu-agency-7okkFhxrxNw-unsplash.jpg" class="card-img-top" alt="project 4" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -124,7 +130,8 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card" style="width: 18rem">
+            <div class="card" style="width: 18rem"  data-aos="fade-up"
+            data-aos-duration="1000" data-aos-delay="600">
               <img src="img/project/charlesdeluvio-Lks7vei-eAg-unsplash.jpg" class="card-img-top" alt="project 5" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -192,6 +199,11 @@
     </footer>
     <!-- akhir footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 
     <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbxyT4F1VxtSTQrFxKgxN6JmOD6e3xMhpt8qJ9u_fmGrqCFgZDWjWV-B61hg46TBj3YX/exec'
